added basic network service

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NFCat</string>
+    <string name="listening">Listening on port %d</string>
+    <string name="connected">Client connected from %s</string>
+    <string name="exception">An exception was thrown: %s</string>
 </resources>
