replace return-based error handling with exception

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="listening">Listening on port %d</string>
     <string name="connected">Client connected from %s</string>
     <string name="exception">An exception was thrown: %s</string>
+    <string name="error">Command resulted in error: %s</string>
+    <string name="auth_fail">authentication failed</string>
+    <string name="invalid_block_index">invalid block index: %s (should be a non-negative number)</string>
+    <string name="invalid_key">invalid key: %s (should be 12 hexadecimal digits)</string>
 </resources>
