--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="invalid_block_index">invalid block index: %s (should be a non-negative number)</string>
     <string name="invalid_sector_index">invalid sector index: %s (should be a non-negative number)</string>
     <string name="invalid_key">invalid key: %s (should be 12 hexadecimal digits)</string>
+    <string name="read_error">couldn\'t read block %1$d: %2$s</string>
 </resources>
