--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="invalid_key">invalid key: %s (should be 12 hexadecimal digits)</string>
     <string name="read_error">couldn\'t read block %1$d: %2$s</string>
     <string name="success">Operation completed successfully.</string>
+    <string name="unrecognized_cmd">Unrecognized command.</string>
 </resources>
